--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default = ["color", "layout"]
 color = ["oklab", "rgb", "ufmt"]
-layout = ["allsorts", "printpdf", "rtext", "thiserror"]
+layout = ["allsorts", "log", "printpdf", "rtext", "thiserror"]
 
 [dependencies]
 rtext = { path = "../rtext", optional = true }
@@ -17,6 +17,7 @@ rgb = { version = "^0.8", default-features = false, features = [
 ], optional = true }
 
 allsorts = { version = "^0.7", optional = true }
+log = { version = "^0.4", default-features = false, optional = true }
 printpdf = { version = "^0.5", optional = true }
 thiserror = { version = "^1.0", optional = true }
 ufmt = { version = "^0.1", features = [
