--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ rgb = { version = "^0.8", default-features = false, features = [
     "argb",
 ], optional = true }
 
-allsorts = { version = "^0.14", optional = true }
+allsorts = { version = "^0.14", default-features = false, features = [
+    "flate2_zlib",
+], optional = true }
 thiserror = { version = "^1.0", optional = true }
 tracing = { version = "^0.1", default-features = false, features = [
     "std",
