Script: script to layout conversion added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default = ["color"]
 color = ["oklab", "rgb", "ufmt"]
-layout = ["allsorts", "rtext", "thiserror", "tracing"]
+layout = ["allsorts", "rtext", "smol_str", "thiserror", "tracing"]
 
 [dependencies]
 rtext = { git = "https://martinkolariknp@bitbucket.org/martinkolariknp/rtext.git", optional = true }
@@ -19,6 +19,7 @@ rgb = { version = "^0.8", default-features = false, features = [
 allsorts = { version = "^0.14", default-features = false, features = [
     "flate2_zlib",
 ], optional = true }
+smol_str = { version = "^0.2", optional = true }
 thiserror = { version = "^1.0", optional = true }
 tracing = { version = "^0.1", default-features = false, features = [
     "std",
