--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 edition = "2024"
 
 [features]
-default = ["color", "layout"]
+default = ["color"]
 color = ["oklab", "rgb", "ufmt"]
 layout = ["allsorts", "rtext", "thiserror", "tracing"]
 
